WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54880
FEColorMatrixElement changes doesn't require relayout.
https://bugs.webkit.org/show_bug.cgi?id=54880
Summary
FEColorMatrixElement changes doesn't require relayout.
Renata Hodovan
Reported
2011-02-21 07:37:26 PST
FEColorMatrixElement changes doesn't require relayout.
Attachments
Patch
(4.73 KB, patch)
2011-02-21 07:46 PST
,
Renata Hodovan
zimmermann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Renata Hodovan
Comment 1
2011-02-21 07:46:53 PST
Created
attachment 83165
[details]
Patch
Renata Hodovan
Comment 2
2011-02-23 11:47:09 PST
In ChangeLog: + No new tests are needed because this modificiation is covered by the dynamic update tests of FESpeculalLighting. s/FESpecularLighting/FEColorMatrix/ :$
Nikolas Zimmermann
Comment 3
2011-02-23 13:03:23 PST
Comment on
attachment 83165
[details]
Patch r=me.
Renata Hodovan
Comment 4
2011-02-23 14:12:00 PST
Committed
r79488
: <
http://trac.webkit.org/changeset/79488
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug